Remove deprecated job configurations for KPI alerts, data pipeline, lakehouse monitoring, ML training, and UC metrics; update orchestration job to utilize serverless compute and adjust task dependencies; enhance DLT pipeline documentation for clarity.

--- a/env.example
+++ b/env.example
@@ -51,3 +51,9 @@ GENIE_PLANNING_SPACE_ID=
 # -----------------------------------------------------------------------------
 # catalog, schema, warehouse_id, app_name – see databricks.yml variables.
 # warehouse_id for dashboard/orchestration is set in databricks.yml under targets.dev.variables.
+
+# -----------------------------------------------------------------------------
+# Compute (jobs & DLT)
+# -----------------------------------------------------------------------------
+# Jobs: notebook tasks use serverless compute (no job cluster). DLT pipeline uses serverless
+# when no clusters block is set (Unity Catalog required). No cluster IDs or node types to set here.
