--- a/resources/jobs/orchestration.yml
+++ b/resources/jobs/orchestration.yml
@@ -1,10 +1,15 @@
-# Single orchestration job: data → gold → ML → UC metrics → monitoring → alerts → dashboard refresh.
-# Run after deploy: databricks bundle run -t dev mfg_demo_orchestration
-# Or trigger from workspace: Bundle → run job mfg_demo_orchestration.
+# Single orchestration job: notebooks + DLT pipeline in sequence (no job-calls-job).
+# All notebook tasks use serverless compute; pipeline task uses DLT pipeline compute.
+# Run: databricks bundle run -t dev mfg_demo_orchestration
 resources:
   jobs:
     mfg_demo_orchestration:
       name: mfg_demo_orchestration
+      queue:
+        enabled: true
+      schedule:
+        quartz_cron_expression: "0 0 6 * * ?"
+        timezone_id: "America/Chicago"
       tasks:
         - task_key: generate_bronze
           notebook_task:
@@ -12,7 +17,6 @@ resources:
             base_parameters:
               catalog: "${var.catalog}"
               schema: "${var.schema}"
-          job_cluster_key: job_cluster
 
         - task_key: run_dlt
           depends_on:
@@ -29,7 +33,6 @@ resources:
             base_parameters:
               catalog: "${var.catalog}"
               schema: "${var.schema}"
-          job_cluster_key: job_cluster
 
         - task_key: uc_metrics
           depends_on:
@@ -39,14 +42,15 @@ resources:
             base_parameters:
               catalog: "${var.catalog}"
               schema: "${var.schema}"
-          job_cluster_key: job_cluster
 
         - task_key: lakehouse_monitoring
           depends_on:
             - task_key: run_dlt
           notebook_task:
             notebook_path: ${workspace.file_path}/notebooks/05_lakehouse_monitoring
-          job_cluster_key: job_cluster
+            base_parameters:
+              catalog: "${var.catalog}"
+              schema: "${var.schema}"
 
         - task_key: alert_kpi
           depends_on:
@@ -56,21 +60,11 @@ resources:
             base_parameters:
               catalog: "${var.catalog}"
               schema: "${var.schema}"
-          job_cluster_key: job_cluster
 
         - task_key: refresh_dashboard
           depends_on:
             - task_key: uc_metrics
           dashboard_task:
-            dashboard_id: ${resources.dashboards.mfg_demo_operations.id}
+            subscription: {}
             warehouse_id: ${var.warehouse_id}
-
-      job_clusters:
-        - job_cluster_key: job_cluster
-          new_cluster:
-            spark_version: "14.3.x-scala2.12"
-            node_type_id: "Standard_DS3_v2"
-            num_workers: 0
-            spark_env_vars:
-              DEMO_CATALOG: "${var.catalog}"
-              DEMO_SCHEMA: "${var.schema}"
+            dashboard_id: ${resources.dashboards.mfg_demo_operations.id}
