--- a/resources/pipelines/dlt_medallion.yml
+++ b/resources/pipelines/dlt_medallion.yml
@@ -1,10 +1,13 @@
 # DLT pipeline: bronze -> silver -> gold (pipelines/dlt_medallion.py).
-# Uses serverless compute (no clusters block); requires Unity Catalog.
-# root_path = pipeline root folder (UI + sys.path); library = workspace path to source.
+# Unity Catalog: catalog + schema at resource level so pipeline is UC (not HMS).
+# Serverless compute; no clusters block.
 resources:
   pipelines:
     mfg_demo_dlt_medallion:
       name: mfg_demo_dlt_medallion
+      catalog: "${var.catalog}"
+      schema: "${var.schema}"
+      serverless: true
       root_path: ${workspace.root_path}/pipelines
       configuration:
         pipeline.catalog: "${var.catalog}"
