Update .gitignore to include Databricks asset bundles and enhance model logging in 03_ml_training.py with input example for model signature inference.

--- a/.gitignore
+++ b/.gitignore
@@ -203,6 +203,9 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
+# Databricks Asset Bundles (local state/cache)
+.databricks/
+
 # Marimo
 marimo/_static/
 marimo/_lsp/
